Added new Product Group classifier.